# subnotebook

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: main_notebook.ipynb  sub_notebook.ipynb  widget_notebook.ipynb
src/subnotebook/: __init__.py  _subnotebook.py
subnotebook/: __init__.py  subnotebook.py
