[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subnotebook"
version = "0.0.1"
description = "Call notebooks as functions"
readme = "README.md"
authors = [
    {name = "David Brochart", email = "david.brochart@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Topic :: Database",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">= 3.8"
dependencies = [
    "nbformat >=5",
]

[project.urls]
Source = "https://github.com/davidbrochart/subnotebook"
Issues = "https://github.com/davidbrochart/subnotebook/issues"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["src/subnotebook"]
